src/components/modal/Modal.css
.modal__overlay-invisible {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0);
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal__window {
  font-family: 'Press Start 2P';
  -webkit-font-smoothing: none;
  color: white;
  background-color: rgba(255, 255, 255, 0.95);
  margin: 0 auto;
  border: 2px solid black;
  border-radius: 5px;
  /*box-shadow: 4px 4px 0 0 rgba(0, 0, 0, 0.4);*/
  width: 500px;
  text-align: right;
}

/* footer buttons and divider align with the 30px body inset */
.modal__window > button {
  margin: 16px 10px 20px;
}

.modal__window > button:last-child {
  margin-right: 30px;
}

.retro-divider {
  border: 0;
  border-top: 2px solid black;
  margin: 0 30px;
}

.modal__header {
  padding: 17px 20px 12px 20px;
  font-size: 16px;
  background-color: rgb(0, 85, 170);
  color: white;
  border-radius: 3px 3px 0 0; /* fits inside the 2px window border */
  border-bottom: 1px rgb(209, 209, 209) solid;
  cursor: move;
  user-select: none;
  touch-action: none;
}

.modal__header > p {
  padding: 5px;
  margin: 0px;
  text-align: left;
}

